--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
   },
   "plugins": ["@typescript-eslint", "react", "react-hooks"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/jsx-uses-react": "error"
   },
   "settings": {
     "react": {
